# mcsimpy

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  compose-dev.yaml  devcontainer.dockerfile  pyproject.toml  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  question.md
.github/workflows/: documentation.yml  run_tests.yml
demos/control/: adaptive_FS.py  backstepping_ctrl.py  basic_controllers.py
demos/guidance/: reference_filter.py  waypoint_reference_model.py
demos/notebooks/: simple_simulator.ipynb
demos/observer/: ekf3dof.py  ltvkf3dof.py  nonlinobs3dof.py
demos/thrust/: sim_w_allocation.py  thrust_allocation.py
demos/vessels/: indentification.py  response_plots.py
demos/waves/: computational_speed.py  multi_dir_wave_demo.py  wave_elevation_demo.py  wave_loads_demo.py
docs/: Makefile  conf.py  getting_started.rst  index.rst  requirements.txt
docs/modules/: control.rst  guidance.rst  observer.rst  simulator.rst  utils.rst  waves.rst
docs/tutorials/: simulation.rst  waveload.rst
src/mclsimpy/: __version__.py  utils.py
src/mclsimpy/simulator/: __init__.py  csad.py  gunnerus.py  thruster_dynamics.py  vessel.py
src/mclsimpy/tools/: abc_transform.py  veres_to_vessel.py  viscous.py
src/mclsimpy/tools/veres/: read_veres_ABC.py  read_veres_TF.py  read_veres_WD.py
src/mclsimpy/waves/: __init__.py  wave_loads.py  wave_spectra.py  wave_spreading.py
src/mcsimpy/: utils.py
src/mcsimpy/control/: __init__.py  adaptiveFS.py  backstepping.py  basic.py
src/mcsimpy/guidance/: __init__.py  filter.py  path_param.py
src/mcsimpy/observer/: __init__.py  ekf.py  ltv_kf.py  nonlinobs.py
src/mcsimpy/simulator/: __init__.py  csad.py  gunnerus.py  thruster_dynamics.py  vessel.py
src/mcsimpy/thrust_allocation/: allocation.py  constraints.py  thruster.py
src/mcsimpy/tools/: veres_to_vessel.py
src/mcsimpy/tools/veres/: read_veres_ABC.py
src/mcsimpy/waves/: __init__.py  wave_loads.py  wave_spectra.py  wave_spreading.py
tests/: test_utils.py  test_wave_spectra.py
