[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mclsimpy"
authors = [
  { name="Jan-Erik Hygen", email="janereh@stud.ntnu.no" },
]
maintainers = [
  { name="Emir Cem Gezer", email="emir.cem.gezer@ntnu.no"}
]
description = "Python vessel simulation environment"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib"
]

keywords = [
  'mclsim',
  'mclsimpy',
  'DP',
  'dynamic positioning',
  'Marine Cybernetics'
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "mclsimpy.__version__"}

[tool.setuptools.package-data]
