[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mclsimpy"
authors = [
  { name="Jan-Erik Hygen", email="janereh@stud.ntnu.no" },
]
maintainers = [
  { name="Emir Cem Gezer", email="emir.cem.gezer@ntnu.no"}
]
description = "Python vessel simulation environment"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version", "dependencies", "optional-dependencies"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
license = { file = "LICENSE" }
keywords = [
  'mclsim',
  'mclsimpy',
  'DP',
  'dynamic positioning',
  'Marine Cybernetics'
]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies.examples = { file = ["requirements.examples.txt"]}



[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/mclsimpy/__version__.py"
version_scheme = 'post-release'

[tool.setuptools.package-data]
